--- a/about_meEN.html
+++ b/about_meEN.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="img/king.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/A_icon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
     <title>Amauj´s Portfolio</title>
@@ -35,15 +35,7 @@
 
     <nav>
       <a href="indexEN.html">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          fill="currentColor"
-        >
-          <path
-            d="M20 20C20 20.5523 19.5523 21 19 21H5C4.44772 21 4 20.5523 4 20V11L1 11L11.3273 1.6115C11.7087 1.26475 12.2913 1.26475 12.6727 1.6115L23 11L20 11V20ZM8 15V17H16V15H8Z"
-          ></path>
-        </svg>
+        <img class="logo-Home" src="img/A.png" alt="">
       </a>
       <ul>
         <li>
@@ -159,6 +151,110 @@
         <section class="skills">
           <h2 class="skills-title">Skills</h2>
           <div class="skills-container">
+
+            <!-- FrontEnd -->
+            <div class="frontend">
+              <h3>Frontend</h3>
+
+              <div class="javascript skill-icons">
+                <svg
+                  viewBox="0 0 256 256"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <rect width="256" height="256" rx="60" fill="#F0DB4F" />
+                  <path
+                    d="M67.3117 213.932L86.9027 202.076C90.6821 208.777 94.1202 214.447 102.367 214.447C110.272 214.447 115.256 211.355 115.256 199.327V117.529H139.314V199.667C139.314 224.584 124.708 235.926 103.398 235.926C84.1533 235.926 72.9819 225.959 67.3113 213.93"
+                    fill="#323330"
+                  />
+                  <path
+                    d="M152.381 211.354L171.969 200.013C177.126 208.434 183.828 214.62 195.684 214.62C205.653 214.62 212.009 209.636 212.009 202.762C212.009 194.514 205.479 191.592 194.481 186.782L188.468 184.203C171.111 176.815 159.597 167.535 159.597 147.945C159.597 129.901 173.345 116.153 194.826 116.153C210.12 116.153 221.118 121.481 229.022 135.4L210.291 147.429C206.166 140.04 201.7 137.119 194.826 137.119C187.78 137.119 183.312 141.587 183.312 147.429C183.312 154.646 187.78 157.568 198.09 162.037L204.104 164.614C224.553 173.379 236.067 182.313 236.067 202.418C236.067 224.072 219.055 235.928 196.2 235.928C173.861 235.928 159.426 225.274 152.381 211.354"
+                    fill="#323330"
+                  />
+                </svg>
+                <p>Javascript</p>
+              </div>
+
+              <div class="html skill-icons">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 256 256"
+                >
+                  <rect width="256" height="256" fill="#E14E1D" rx="60" />
+                  <path
+                    fill="#fff"
+                    d="M48 38L56.6098 134.593H167.32L163.605 176.023L127.959 185.661L92.38 176.037L90.0012 149.435H57.9389L62.5236 200.716L127.951 218.888L193.461 200.716L202.244 102.655H85.8241L82.901 69.9448H205.041H205.139L208 38H48Z"
+                  />
+                  <path
+                    fill="#EBEBEB"
+                    d="M128 38H48L56.6098 134.593H128V102.655H85.8241L82.901 69.9448H128V38Z"
+                  />
+                  <path
+                    fill="#EBEBEB"
+                    d="M128 185.647L127.959 185.661L92.38 176.037L90.0012 149.435H57.9388L62.5236 200.716L127.951 218.888L128 218.874V185.647Z"
+                  />
+                </svg>
+                <p>HTML</p>
+              </div>
+
+              <div class="css skill-icons">
+                <svg
+                  viewBox="0 0 256 256"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <rect width="256" height="256" rx="60" fill="#0277BD" />
+                  <path
+                    d="M53.7527 102.651L56.6155 134.593H128.096V102.651H53.7527Z"
+                    fill="#EBEBEB"
+                  />
+                  <path
+                    d="M128.095 38H127.985H48L50.9036 69.9423H128.095V38Z"
+                    fill="#EBEBEB"
+                  />
+                  <path
+                    d="M128.095 218.841V185.608L127.955 185.645L92.3813 176.04L90.1072 150.564H72.821H58.0425L62.5175 200.718L127.948 218.882L128.095 218.841Z"
+                    fill="#EBEBEB"
+                  />
+                  <path
+                    d="M167.318 134.593L163.61 176.019L127.985 185.635V218.866L193.468 200.718L193.948 195.321L201.454 111.229L202.233 102.651L208 38H127.985V69.9423H172.994L170.088 102.651H127.985V134.593H167.318Z"
+                    fill="white"
+                  />
+                </svg>
+                <p>CSS</p>
+              </div>
+
+              <div class="figma skill-icons">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  x="0px"
+                  y="0px"
+                  width="100"
+                  height="100"
+                  viewBox="0 0 48 48"
+                >
+                  <path
+                    fill="#e64a19"
+                    d="M26,17h-8c-3.866,0-7-3.134-7-7v0c0-3.866,3.134-7,7-7h8V17z"
+                  ></path>
+                  <path
+                    fill="#7c4dff"
+                    d="M25,31h-7c-3.866,0-7-3.134-7-7v0c0-3.866,3.134-7,7-7h7V31z"
+                  ></path>
+                  <path
+                    fill="#66bb6a"
+                    d="M18,45L18,45c-3.866,0-7-3.134-7-7v0c0-3.866,3.134-7,7-7h7v7C25,41.866,21.866,45,18,45z"
+                  ></path>
+                  <path
+                    fill="#ff7043"
+                    d="M32,17h-7V3h7c3.866,0,7,3.134,7,7v0C39,13.866,35.866,17,32,17z"
+                  ></path>
+                  <circle cx="32" cy="24" r="7" fill="#29b6f6"></circle>
+                </svg>
+                <p>Figma</p>
+              </div>
+            </div>
             <!-- Data Analysis -->
             <div class="data-analist">
               <h3>Data Analysis</h3>
@@ -439,111 +535,6 @@
                 <p>Python</p>
               </div>
             </div>
-
-            <!-- FrontEnd -->
-            <div class="frontend">
-              <h3>Frontend</h3>
-
-              <div class="javascript skill-icons">
-                <svg
-                  viewBox="0 0 256 256"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <rect width="256" height="256" rx="60" fill="#F0DB4F" />
-                  <path
-                    d="M67.3117 213.932L86.9027 202.076C90.6821 208.777 94.1202 214.447 102.367 214.447C110.272 214.447 115.256 211.355 115.256 199.327V117.529H139.314V199.667C139.314 224.584 124.708 235.926 103.398 235.926C84.1533 235.926 72.9819 225.959 67.3113 213.93"
-                    fill="#323330"
-                  />
-                  <path
-                    d="M152.381 211.354L171.969 200.013C177.126 208.434 183.828 214.62 195.684 214.62C205.653 214.62 212.009 209.636 212.009 202.762C212.009 194.514 205.479 191.592 194.481 186.782L188.468 184.203C171.111 176.815 159.597 167.535 159.597 147.945C159.597 129.901 173.345 116.153 194.826 116.153C210.12 116.153 221.118 121.481 229.022 135.4L210.291 147.429C206.166 140.04 201.7 137.119 194.826 137.119C187.78 137.119 183.312 141.587 183.312 147.429C183.312 154.646 187.78 157.568 198.09 162.037L204.104 164.614C224.553 173.379 236.067 182.313 236.067 202.418C236.067 224.072 219.055 235.928 196.2 235.928C173.861 235.928 159.426 225.274 152.381 211.354"
-                    fill="#323330"
-                  />
-                </svg>
-                <p>Javascript</p>
-              </div>
-
-              <div class="html skill-icons">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 256 256"
-                >
-                  <rect width="256" height="256" fill="#E14E1D" rx="60" />
-                  <path
-                    fill="#fff"
-                    d="M48 38L56.6098 134.593H167.32L163.605 176.023L127.959 185.661L92.38 176.037L90.0012 149.435H57.9389L62.5236 200.716L127.951 218.888L193.461 200.716L202.244 102.655H85.8241L82.901 69.9448H205.041H205.139L208 38H48Z"
-                  />
-                  <path
-                    fill="#EBEBEB"
-                    d="M128 38H48L56.6098 134.593H128V102.655H85.8241L82.901 69.9448H128V38Z"
-                  />
-                  <path
-                    fill="#EBEBEB"
-                    d="M128 185.647L127.959 185.661L92.38 176.037L90.0012 149.435H57.9388L62.5236 200.716L127.951 218.888L128 218.874V185.647Z"
-                  />
-                </svg>
-                <p>HTML</p>
-              </div>
-
-              <div class="css skill-icons">
-                <svg
-                  viewBox="0 0 256 256"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <rect width="256" height="256" rx="60" fill="#0277BD" />
-                  <path
-                    d="M53.7527 102.651L56.6155 134.593H128.096V102.651H53.7527Z"
-                    fill="#EBEBEB"
-                  />
-                  <path
-                    d="M128.095 38H127.985H48L50.9036 69.9423H128.095V38Z"
-                    fill="#EBEBEB"
-                  />
-                  <path
-                    d="M128.095 218.841V185.608L127.955 185.645L92.3813 176.04L90.1072 150.564H72.821H58.0425L62.5175 200.718L127.948 218.882L128.095 218.841Z"
-                    fill="#EBEBEB"
-                  />
-                  <path
-                    d="M167.318 134.593L163.61 176.019L127.985 185.635V218.866L193.468 200.718L193.948 195.321L201.454 111.229L202.233 102.651L208 38H127.985V69.9423H172.994L170.088 102.651H127.985V134.593H167.318Z"
-                    fill="white"
-                  />
-                </svg>
-                <p>CSS</p>
-              </div>
-
-              <div class="figma skill-icons">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  x="0px"
-                  y="0px"
-                  width="100"
-                  height="100"
-                  viewBox="0 0 48 48"
-                >
-                  <path
-                    fill="#e64a19"
-                    d="M26,17h-8c-3.866,0-7-3.134-7-7v0c0-3.866,3.134-7,7-7h8V17z"
-                  ></path>
-                  <path
-                    fill="#7c4dff"
-                    d="M25,31h-7c-3.866,0-7-3.134-7-7v0c0-3.866,3.134-7,7-7h7V31z"
-                  ></path>
-                  <path
-                    fill="#66bb6a"
-                    d="M18,45L18,45c-3.866,0-7-3.134-7-7v0c0-3.866,3.134-7,7-7h7v7C25,41.866,21.866,45,18,45z"
-                  ></path>
-                  <path
-                    fill="#ff7043"
-                    d="M32,17h-7V3h7c3.866,0,7,3.134,7,7v0C39,13.866,35.866,17,32,17z"
-                  ></path>
-                  <circle cx="32" cy="24" r="7" fill="#29b6f6"></circle>
-                </svg>
-                <p>Figma</p>
-              </div>
-            </div>
-
             <!-- BackEnd -->
             <div class="backend">
               <h3>Backend</h3>
