--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="img/king.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/A_icon.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
     <title>Amauj Portafolio</title>
@@ -32,16 +32,9 @@
     </div>
 
     <nav>
-      <a href="index.html"
-        ><svg
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          fill="currentColor"
-        >
-          <path
-            d="M20 20C20 20.5523 19.5523 21 19 21H5C4.44772 21 4 20.5523 4 20V11L1 11L11.3273 1.6115C11.7087 1.26475 12.2913 1.26475 12.6727 1.6115L23 11L20 11V20ZM8 15V17H16V15H8Z"
-          ></path></svg
-      ></a>
+      <a href="index.html">
+        <img class="logo-Home" src="img/A.png" alt="">
+        </a>
       <ul>
         <li>
           <a href="about_me.html">Sobre mi</a>
