--- a/about_me.html
+++ b/about_me.html
@@ -38,7 +38,7 @@
 
     <nav>
       <a href="index.html">
-        <img class="logo-Home" src="img/A.png" alt="">
+        <img class="logo-Home" src="img/A.png" alt="" />
       </a>
       <ul>
         <li>
@@ -85,15 +85,32 @@
                 <h3>PersonalSoft Colombia | Remoto</h3>
                 <p class="duracion">Marzo 2022 - Agosto 2022</p>
               </div>
-              <p class="text-job">
-                Comencé en Personalsoft durante mis prácticas universitarias.
-                Adquirí experiencia en bases de datos con SQL Server y MySQL,
-                extracción y transformación de datos con
-                Python(Pandas,Anaconda), Azure y Data Factory, y visualización
-                de datos con Power BI. También exploré Power Platform,
-                desarrollando una aplicación para Sura Colombia que me permitió
-                destacarme en la empresa.
-              </p>
+              <section class="text-job">
+                <p>
+                  <strong>Experiencia en Bases de Datos</strong><br />
+                  Durante mis prácticas en Personalsoft, trabajé con SQL Server
+                  y MySQL, desarrollando habilidades en la gestión y
+                  manipulación de datos.
+                </p>
+                <p>
+                  <strong>Extracción y Transformación de Datos</strong><br />
+                  Utilicé Python con Pandas y Anaconda, además de herramientas
+                  en la nube como Azure y Data Factory, para extraer y
+                  transformar datos de manera efectiva.
+                </p>
+                <p>
+                  <strong>Visualización de Datos</strong><br />
+                  Me especialicé en el uso de Power BI para crear
+                  visualizaciones claras y efectivas que facilitaron la
+                  interpretación de datos complejos.
+                </p>
+                <p>
+                  <strong>Desarrollo de Aplicaciones</strong><br />
+                  Exploré Power Platform y desarrollé una aplicación para Sura
+                  Colombia, demostrando mi capacidad para innovar y ofrecer
+                  soluciones prácticas que añaden valor empresarial.
+                </p>
+              </section>
             </div>
 
             <!-- Trainee -->
@@ -111,15 +128,25 @@
                 <h3>PersonalSoft Colombia | Remoto</h3>
                 <p class="duracion">Octubre 2022 - Mayo 2023</p>
               </div>
-              <p class="text-job">
-                Después de destacarme en mi desempeño, fui contratado como
-                Trainee, desempeñando funciones tanto de Analista de Datos como
-                de desarrollador en Power Platform. Durante este tiempo, utilicé
-                herramientas como Power BI, bases de datos como MySQL y SQL
-                Server, Python con énfasis en Pandas, Data Azure Factory, y
-                trabajé en el entorno de Power Platform, incluyendo Power
-                Automate y Power Apps.
-              </p>
+              <section class="text-job">
+                <p>
+                  <strong>Analista de Datos</strong><br />
+                  Destacándome en mi desempeño, fui contratado como Trainee,
+                  donde desempeñé funciones de Analista de Datos. Durante este
+                  tiempo, utilicé herramientas como Power BI para análisis
+                  visual y bases de datos como MySQL y SQL Server para la
+                  gestión de datos. <br />
+                </p>
+                <p>
+                  <strong>Desarrollador</strong><br />
+                  Como Trainee, desarrollé habilidades en Python, especialmente
+                  en Pandas, para la extracción y transformación de datos.
+                  También trabajé con Data Azure Factory para la manipulación de
+                  datos en la nube. En Power Platform, me especialicé en Power
+                  Automate para la automatización y Power Apps para el
+                  desarrollo de aplicaciones empresariales.
+                </p>
+              </section>
             </div>
           </div>
         </div>
@@ -1000,7 +1027,6 @@
                 <p>Illustrator</p>
               </div>
             </div>
-            
           </div>
         </section>
 
