--- a/about_meEN.html
+++ b/about_meEN.html
@@ -85,11 +85,30 @@
             </h3>
             <p class="duracion">March 2022 - August 2022</p>
           </div>
-            <p class="text-job">
-              I started at Personalsoft during my university internship. I gained experience in databases using SQL Server and MySQL, 
-              data extraction and transformation with Python (Pandas, Anaconda), Azure, and Data Factory, as well as data visualization with Power BI. 
-              I also explored Power Platform, developing an application for Sura Colombia, which allowed me to stand out in the company.
+          <section class="text-job">
+            <p>
+              <strong>Experience in Databases</strong><br />
+              During my internship at Personalsoft, worked with SQL Server
+              and MySQL, developing skills in data management and manipulation.
             </p>
+            <p>
+              <strong>Data Extraction and Transformation</strong><br />
+              Used Python with Pandas and Anaconda, as well as cloud tools
+              like Azure and Data Factory, to effectively extract and
+              transform data.
+            </p>
+            <p>
+              <strong>Data Visualization</strong><br />
+              Specialized in using Power BI to create clear and effective
+              visualizations that facilitated the interpretation of complex data.
+            </p>
+            <p>
+              <strong>Application Development</strong><br />
+              Explored Power Platform and developed an application for Sura
+              Colombia, demonstrating my ability to innovate and provide
+              practical solutions that add business value.
+            </p>
+          </section>
           </div>
 
             <!-- Trainee -->
@@ -107,11 +126,24 @@
               </h3>
               <p class="duracion">October 2022 - May 2023</p>
             </div>
-              <p class="text-job">
-                After excelling in my performance, I was hired as a Trainee, performing duties both as a Data Analyst and a developer in Power Platform. 
-                During this time, I utilized tools such as Power BI, databases like MySQL and SQL Server, Python with emphasis on Pandas, 
-                Azure Data Factory, and worked within the Power Platform environment, including Power Automate and Power Apps.
+            <section class="text-job">
+              <p>
+                <strong>Data Analyst</strong><br />
+                Standing out in my performance, I was hired as a Trainee,
+                where performed Data Analyst functions. During this
+                time, used tools like Power BI for visual analysis
+                and databases like MySQL and SQL Server for data management.
               </p>
+              <p>
+                <strong>Developer</strong><br />
+                As a Trainee, developed skills in Python, especially
+                in Pandas, for data extraction and transformation.also
+                worked with Data Azure Factory for data manipulation
+                in the cloud. In Power Platform, specialized in
+                Power Automate for automation and Power Apps for
+                the development of enterprise applications.
+              </p>
+            </section>
             </div>
           </div>
         </div>
