change info index

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <nav>
       <a href="index.html">
-        <img class="logo-Home" src="img/A.png" alt="">
+        <img class="logo-Home" src="img/A.png" alt="" />
       </a>
       <ul>
         <li>
@@ -62,26 +62,32 @@
           <div class="writing-bar"></div>
         </div>
 
-        <p class="name-title__desc">
-          Soy tu <b>Desarrollador Front-End</b> y <b>Analista de datos</b> de
-          confianza. Aquí podrás encontrar ejemplos de mi trabajo en el mundo
-          del desarrollo. ¡Explora y siéntete libre de contactarme para
-          colaborar en proyectos futuros! Estoy comprometido a mejorar
-          continuamente y ofrecerte soluciones de alta calidad para tus
-          necesidades de desarrollo. ¡Espero poder trabajar juntos pronto!
+        <section class="name-title__desc">
+        <p>
+          +1 año de experiencia. <strong>Desarrollador de software y Analista de datos </strong> entusiasta especializado en experiencia de
+          usuario e interfaces web.
         </p>
+      </section>
 
         <div class="about-work">
           <a href="about_me.html">
             <button class="animated-button">
-              <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
+              <svg
+                viewBox="0 0 24 24"
+                class="arr-2"
+                xmlns="http://www.w3.org/2000/svg"
+              >
                 <path
                   d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
                 ></path>
               </svg>
               <span class="text">Ver más sobre mi</span>
               <span class="circle"></span>
-              <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
+              <svg
+                viewBox="0 0 24 24"
+                class="arr-1"
+                xmlns="http://www.w3.org/2000/svg"
+              >
                 <path
                   d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
                 ></path>
