name-title__desc update

--- a/indexEN.html
+++ b/indexEN.html
@@ -60,15 +60,12 @@
           <div class="writing-bar"></div>
         </div>
 
-        <p class="name-title__desc">
-          I'm your trusted <b>Front-End Developer</b> and <b>Data Analyst</b>. Here you
-          can find examples of my work in the development world. Explore and
-          feel free to contact me to collaborate on future projects! I'm
-          committed to continuous improvement and providing high-quality
-          solutions for your development needs. I look forward to working
-          together soon!
+        <section class="name-title__desc">
+        <p>
+          +1 year of experience. Enthusiastic Software Developer and Data Analyst specialized in user experience and web interfaces.
         </p>
-
+      </section>
+      
         <div class="about-work">
           <a href="about_me.html">
             <button class="animated-button">
