--- a/indexEN.html
+++ b/indexEN.html
@@ -62,7 +62,7 @@
 
         <section class="name-title__desc">
         <p>
-          +1 year of experience. Enthusiastic Software Developer and Data Analyst specialized in user experience and web interfaces.
+          +1 year of experience. Enthusiastic <strong>Software Developer and Data Analyst </strong> specialized in user experience and web interfaces.
         </p>
       </section>
       
