refactor nav aboutme page

--- a/about_me.html
+++ b/about_me.html
@@ -21,7 +21,7 @@
 
   <body>
     <!-- background -->
-    <div class="area-aboutme">
+    <div class="background-aboutme">
       <ul class="circles">
         <li></li>
         <li></li>
@@ -38,7 +38,7 @@
 
     <nav>
       <a href="index.html">
-        <img class="logo-Home" src="img/A.png" alt="" />
+        <img class="logo-Home" src="img/AmaujHome.png" alt="" />
       </a>
       <ul>
         <li>
@@ -47,7 +47,7 @@
         <li>
           <a class="change-language" href="about_meEN.html"
             ><b>EN</b>
-            <img src="img/EN.webp" alt="" />
+            <img src="img/languageEN.webp" alt="" />
           </a>
         </li>
       </ul>
