--- a/about_meEN.html
+++ b/about_meEN.html
@@ -18,7 +18,7 @@
 
   <body>
     <!-- background -->
-    <div class="area-aboutme">
+    <div class="background-aboutme">
       <ul class="circles">
         <li></li>
         <li></li>
@@ -35,7 +35,7 @@
 
     <nav>
       <a href="indexEN.html">
-        <img class="logo-Home" src="img/A.png" alt="">
+        <img class="logo-Home" src="img/AmaujHome.png" alt="">
       </a>
       <ul>
         <li>
@@ -44,7 +44,7 @@
         <li>
           <a class="change-language" href="about_me.html"
             ><B>ES</B>
-            <img src="img/ESP.webp" alt="" />
+            <img src="img/languageES.webp" alt="" />
           </a>
         </li>
       </ul>
