refactor nav projects page

--- a/about_meEN.html
+++ b/about_meEN.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="img/A_icon.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
-    <title>Amauj´s Portfolio</title>
+    <title>Amauj's Portfolio</title>
     <script defer src="main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
