--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,8 @@
   </head>
 
   <body>
-    <div class="area-projects">
+    <!-- background -->
+    <div class="background-projects">
       <ul class="circles">
         <li></li>
         <li></li>
@@ -33,7 +34,7 @@
 
     <nav>
       <a href="index.html">
-        <img class="logo-Home" src="img/A.png" alt="">
+        <img class="logo-Home" src="img/AmaujHome.png" alt="">
         </a>
       <ul>
         <li>
@@ -42,7 +43,7 @@
         <li>
           <a class="change-language" href="projectsEN.html"
             ><b>EN</b>
-            <img src="img/EN.webp" alt="" />
+            <img src="img/languageEN.webp" alt="" />
           </a>
         </li>
       </ul>
