--- a/projectsEN.html
+++ b/projectsEN.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="img/A_icon.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" />
-    <title>Amauj´s Portfolio</title>
+    <title>Amauj's Portfolio</title>
     <script defer src="main.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +16,8 @@
   </head>
 
   <body>
-    <div class="area-projects">
+    <!-- background -->
+    <div class="background-projects">
       <ul class="circles">
         <li></li>
         <li></li>
@@ -33,7 +34,7 @@
 
     <nav>
       <a href="indexEN.html">
-        <img class="logo-Home" src="img/A.png" alt="">
+        <img class="logo-Home" src="img/AmaujHome.png" alt="" />
       </a>
       <ul>
         <li>
@@ -42,7 +43,7 @@
         <li>
           <a class="change-language" href="projects.html"
             ><b>ES</b>
-            <img src="img/ESP.webp" alt="" />
+            <img src="img/languageES.webp" alt="" />
           </a>
         </li>
       </ul>
