fix button aboutme error target

--- a/indexEN.html
+++ b/indexEN.html
@@ -75,7 +75,7 @@
         </section>
 
         <section class="info-footer">
-          <a href="about_me.html">
+          <a href="about_meEN.html">
             <button class="about-me-button">
               <svg
                 viewBox="0 0 24 24"
